--- a/QuizApplication/app/build.gradle
+++ b/QuizApplication/app/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.quizapplication"
@@ -32,8 +32,17 @@ android {
 }
 
 dependencies {
+    def activity_version = "1.5.1"
+    def lifecycle_version = "2.6.0-alpha02"
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    // Kotlin
+    implementation "androidx.activity:activity-ktx:$activity_version"
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    // alternately - if using Java8, use the following instead of lifecycle-compiler
+    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
+
+    implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.5.0'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
